# grade-manager

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: api.py  main.py
backend/app/core/: config.py  database.py  deps.py  errors.py  pagination.py  security.py  status.py  time.py
backend/app/models/: __init__.py  class_.py  course.py  exam.py  import_.py  schedule.py  score.py  student.py  teacher.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/classes/: router.py  schemas.py  service.py
backend/app/modules/courses/: router.py  schemas.py  service.py
backend/app/modules/dashboard/: router.py  schemas.py  service.py
backend/app/modules/exams/: roster_service.py  router.py  schemas.py  service.py
backend/app/modules/imports/: router.py  schemas.py  service.py  workbook.py
backend/app/modules/schedules/: router.py  schemas.py  service.py
backend/app/modules/scores/: import_service.py  router.py  schemas.py  service.py  template_service.py
backend/app/modules/statistics/: router.py  schemas.py  service.py
backend/scripts/: seed_demo_data.py
backend/tests/: conftest.py  test_auth.py  test_classes_students_courses_schedules.py  test_config.py  test_dashboard.py  test_exams_rosters.py  test_health.py  test_schema_contract.py  test_score_import.py  test_scores.py  test_seed_demo_data.py  test_statistics.py  test_student_import.py
docs/: dashboard-redesign-mockup.html
(+85 files in other folders)
