[project]
name = "grade-manager-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "openpyxl>=3.1.5",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.5.2",
  "pymysql>=1.1.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
